replaced with environment URI

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Hello world!</h1>
-    <a href="https://www.strava.com/oauth/authorize?client_id=50735&response_type=code&redirect_uri=http://localhost:5000/strava&approval_prompt=force&scope=activity:read_all">Click me to check strava workflow</a>
+    <a href="https://www.strava.com/oauth/authorize?client_id=50735&response_type=code&redirect_uri=http://api.bikedataproject.info/registrations/strava&approval_prompt=force&scope=activity:read_all">Click me to check strava workflow</a>
     <!-- Content -->
   </body>
 </html>
